[tool.poetry]
name = "datacamp"
version = "0.1.0"
description = ""
authors = ["nabinno <nab@blahfe.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17.4"
pandas = "^0.25.3"
sqlalchemy = "^1.3.12"
scipy = "^1.4.1"
matplotlib = "^3.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.10.2"
pyspark = "^2.4.4"
scikit-image = "^0.16.2"
imageio = "^2.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
