[tool.poetry]
name = "datacamp"
version = "0.1.0"
description = ""
authors = ["nabinno <nab@blahfe.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pandas = "^1.3.0"
sqlalchemy = "^1.3.12"
scipy = "^1.7.0"
matplotlib = "^3.5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"
pyspark = "^3.3.2"
scikit-image = "^0.19.0"
imageio = "^2.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
